# hollow-earth

./: README.md
crates/engine_ai/src/creatures/: hostile.rs  mod.rs  passive.rs
crates/engine_audio/src/: lib.rs
crates/engine_audio/src/sphere/: echo.rs  mod.rs
crates/engine_network/src/protocol/: hollow_earth_ext.rs  mod.rs
crates/engine_physics/src/: lib.rs
crates/engine_physics/src/sphere/: curvature.rs  freefall.rs  gravity.rs  mod.rs
crates/engine_render/src/: lib.rs
crates/engine_render/src/sphere/: core_glow.rs  curvature_fog.rs  interior_sky.rs  mod.rs  radial_shadows.rs
crates/engine_ui/: Cargo.toml
crates/engine_ui/src/hud/: depth_indicator.rs  gravity_indicator.rs  mod.rs  radiation_indicator.rs  tether_status.rs
crates/engine_world/src/: lib.rs
crates/engine_world/src/sphere/: biomes.rs  core_region.rs  mod.rs  shell.rs  sphere_gen.rs
crates/game/: Cargo.toml
crates/game/src/: integration_tests.rs  lib.rs
crates/game/src/building/: mod.rs  tether.rs
crates/game/src/crafting/: mod.rs  sphere_stations.rs  sphere_weapons.rs
crates/game/src/networking/: mod.rs  sphere_sync.rs
crates/game/src/sphere/: equipment.rs  mod.rs  orientation.rs  radiation.rs
crates/game/src/survival/: core_exposure.rs  mod.rs
crates/game/tests/: integration.rs
crates/server/: Cargo.toml
