[package]
name = "lattice_server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Lattice survival game server"

[[bin]]
name = "hollow-earth-server"
path = "src/main.rs"

[dependencies]
engine_core = { path = "../engine_core" }
engine_world = { path = "../engine_world" }
engine_network = { path = "../engine_network" }
engine_ai = { path = "../engine_ai" }
glam.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true

[lints]
workspace = true
